@startuml
'https://plantuml.com/class-diagram

class UserInput
{

}

class InputValidator
{
    boolean checkYesOrNo
}

class CreateFilesAndFolders
{
    String generateWebsiteFolder(String websiteName)
    String generateHTMLFile(String websiteName, String authorName)
    String generateCSSFolder(String websiteName, boolean makeCSS)
    String generateJSFolder(String websiteName, boolean makeJS)
}

class WriteFile
{
    writeToFile(String websiteName)
}

UserInput --|> InputValidator
InputValidator --|> CreateFilesAndFolders
CreateFilesAndFolders --|> WriteFile

@enduml